--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,19 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"name": "Launch Homey-Container",
+			"name": "H2016:Select",
+			"type": "node",
+			"request": "launch",
+			"cwd": "${workspaceFolder}",
+			"runtimeExecutable": "homey",
+			"args": [
+				"select",
+				"-n",
+				"H2016"
+			]
+		},
+		{
+			"name": "H2016:Run",
 			"type": "node",
 			"request": "launch",
 			"cwd": "${workspaceFolder}",
@@ -15,11 +27,57 @@
 			"serverReadyAction": {
 				"pattern": "Debugger listening on",
 				"action": "startDebugging",
-				"name": "Attach Homey-Container"
+				"name": "H2016:Attach",
 			}
 		},
 		{
-			"name": "Launch Homey-Remote",
+			"name": "H2016:Attach",
+			"type": "node",
+			"request": "attach",
+			"address": "192.168.50.10",
+			"port": 9229,
+			"localRoot": "${workspaceFolder}",
+			"remoteRoot": "/",
+		},
+		{
+			"name": "HP2023:Select",
+			"type": "node",
+			"request": "launch",
+			"cwd": "${workspaceFolder}",
+			"runtimeExecutable": "homey",
+			"args": [
+				"select",
+				"-n",
+				"HP2023"
+			]
+		},
+		{
+			"name": "HP2023:local:Run",
+			"type": "node",
+			"request": "launch",
+			"cwd": "${workspaceFolder}",
+			"runtimeExecutable": "homey",
+			"args": [
+				"app",
+				"run",
+			],
+			"outputCapture": "std",
+			"serverReadyAction": {
+				"pattern": "Debugger listening on",
+				"action": "startDebugging",
+				"name": "HP2023:local:Attach",
+			}
+		},
+		{
+			"name": "HP2023:local:Attach",
+			"type": "node",
+			"request": "attach",
+			"port": 9229,
+			"localRoot": "${workspaceFolder}",
+			"remoteRoot": "/app/",
+		},
+		{
+			"name": "HP2023:remote:Run",
 			"type": "node",
 			"request": "launch",
 			"cwd": "${workspaceFolder}",
@@ -33,30 +91,20 @@
 			"serverReadyAction": {
 				"pattern": "Debugger listening on",
 				"action": "startDebugging",
-				"name": "Attach Homey-Remote"
+				"name": "HP2023:remote:Attach",
 			}
 		},
-
 		{
-			"name": "Attach Homey-Container",
+			"name": "HP2023:remote:Attach",
 			"type": "node",
 			"request": "attach",
+			"address": "192.168.50.11",
 			"port": 9229,
 			"localRoot": "${workspaceFolder}",
 			"remoteRoot": "/app/",
 		},
 		{
-			"name": "Attach Homey-Remote",
-			"type": "node",
-			"request": "attach",
-			// "address": "192.168.50.10",
-			"address": "192.168.50.11",
-			"port": 9229,
-			"localRoot": "${workspaceFolder}",
-			"remoteRoot": "/",
-		},
-		{
-			"name": "Attach Chrome",
+			"name": "Attach: chrome",
 			"type": "chrome",
 			"request": "attach",
 			"port": 9222,
