--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "debug": "homey app run",
+    "debug:remote": "npm run debug -- --remote",
     "start": "npm install && homey app install",
     "build": "homey app build",
     "publish": "homey app publish",
@@ -41,6 +42,7 @@
   },
   "dependencies": {
     "axios": "^1.3.2",
-    "bonjour": "^3.5.0"
+    "bonjour": "^3.5.0",
+    "simplelog-api": "github:cghome/homey.simplelog-api#master"
   }
 }
