--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postpublish": "git commit --amend --no-edit ./package.json && git push -f origin main",
     "validate": "homey app validate -l publish",
     "validateTest": "homey app validate",
+    "update:myHomey": "npm uninstall my-homey && npm install github:cgHome/homey.my-homey",
     "eslint": "eslint"
   },
   "repository": {
@@ -25,7 +26,7 @@
     "Smarthome",
     "homey",
     "myStrom-SmartHome",
-    "ch.mystrom.smarthome"
+    "ch.myStrom.smarthome"
   ],
   "author": "Chris Gross <cgHome@cflat-inc.org>",
   "license": "ISC",
@@ -35,14 +36,13 @@
   "homepage": "https://homey.app/a/ch.mystrom.smarthome",
   "devDependencies": {
     "@tsconfig/node12": "^1.0.11",
-    "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.3",
-    "@types/node": "^18.11.19",
-    "eslint": "^8.33.0",
+    "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.4",
+    "@types/node": "^20.1.0",
+    "eslint": "^8.40.0",
     "eslint-config-athom": "^3.1.1"
   },
   "dependencies": {
-    "axios": "^1.3.2",
-    "bonjour": "^3.5.0",
-    "simplelog-api": "github:cghome/homey.simplelog-api#master"
+    "axios": "^1.4.0",
+    "bonjour": "^3.5.0"
   }
 }
