--- a/app.json
+++ b/app.json
@@ -251,6 +251,7 @@
       "class": "socket",
       "capabilities": [
         "onoff",
+        "meter_power",
         "measure_power",
         "measure_temperature"
       ],
